--- a/frontEnd/src/Components/MainContent/Main.css
+++ b/frontEnd/src/Components/MainContent/Main.css
@@ -6,3 +6,17 @@
     padding-bottom: 7px !important;
     font-size: 16px !important;
 }
+
+[dir="rtl"] .rate {
+    float: left;
+    margin-left: 20px;
+    
+
+  }
+  
+  [dir="rtl"] .cart {
+    float: right;
+    
+  }
+
+  
